--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "boostrap": "^2.0.0",
+    "dotenv": "^16.0.0",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
-    "react-image-magnify": "^2.7.4",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
